--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Initial template with React boostrap and sass",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --mode development -w --progress --color"
   },
@@ -17,12 +17,12 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.14.3",
-    "@babel/plugin-syntax-jsx": "^7.12.13",
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
     "@popperjs/core": "^2.9.2",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.5",
+    "mini-css-extract-plugin": "^1.6.0",
     "sass": "^1.34.0",
     "sass-loader": "^11.1.1",
     "style-loader": "^2.0.0",
