--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "react-template",
   "version": "1.0.0",
   "description": "React template with react router, boostrap, sass and axios",
-  "homepage": ".",
   "scripts": {
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,6 +13,7 @@
     "bootstrap": "^5.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "source-map-loader": "^3.0.0"
   },
