--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "source-map-loader": "^3.0.0"
+    "source-map-loader": "^3.0.0",
+    "webpack-hot-dev-clients": "^2.0.2"
   },
   "license": "MIT",
   "devDependencies": {
