--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta1",
-    "node-sass": "^4.14.1",
-    "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^5.0.0",
+    "sass": "^1.46.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
