--- a/package.json
+++ b/package.json
@@ -2,11 +2,32 @@
    "name": "react-template",
    "version": "1.0.0",
    "description": "",
-   "main": "index.js",
+   "main": "src/index.js",
    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "start": "webpack --mode development -w --progress --color",
+      "build": "webpack --mode production"
    },
    "keywords": [],
-   "author": "Pedro Briceño Larios",
-   "license": "ISC"
+   "author": "",
+   "license": "MIT",
+   "devDependencies": {
+      "@babel/core": "^7.17.8",
+      "@babel/preset-env": "^7.16.11",
+      "@babel/preset-react": "^7.16.7",
+      "babel-loader": "^8.2.4",
+      "css-loader": "^6.7.1",
+      "html-loader": "^3.1.0",
+      "html-webpack-plugin": "^5.5.0",
+      "mini-css-extract-plugin": "^2.6.0",
+      "sass": "^1.49.9",
+      "sass-loader": "^12.6.0",
+      "style-loader": "^3.3.1",
+      "webpack": "^5.70.0",
+      "webpack-cli": "^4.9.2"
+   },
+   "dependencies": {
+      "@popperjs/core": "^2.11.4",
+      "bootstrap": "^5.1.3"
+   }
 }
