--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
    "name": "react-template",
    "version": "1.0.0",
    "description": "",
-   "main": "src/index.js",
+   "homepage": ".",
+   "private": true,
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
       "start": "webpack --mode development -w --progress --color",
@@ -17,6 +18,7 @@
       "@babel/preset-react": "^7.16.7",
       "babel-loader": "^8.2.4",
       "css-loader": "^6.7.1",
+      "eslint-plugin-react-hooks": "^4.4.0",
       "html-loader": "^3.1.0",
       "html-webpack-plugin": "^5.5.0",
       "mini-css-extract-plugin": "^2.6.0",
@@ -28,6 +30,10 @@
    },
    "dependencies": {
       "@popperjs/core": "^2.11.4",
-      "bootstrap": "^5.1.3"
+      "bootstrap": "^5.1.3",
+      "react": "^18.0.0",
+      "react-dom": "^18.0.0",
+      "react-router": "^6.2.2",
+      "react-router-dom": "^6.2.2"
    }
 }
